[package]
name = "wvm-rpc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wvm-rpc-proxy"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
async-trait = "0.1.50"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
dotenv = {version = "0.15.0"}
axum-macros = "0.3"