[package]
name = "wvm-proxy-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.45.0"
shuttle-axum = "0.45.0"
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"

